# MoMEMtaNeuralNet

./: .gitmodules  MoMEMtaNeuralNet.py  Model.py  NeuralNet.py  README.md  Utils.py  concatenate_csv.py  config_example_v1_0_8.py  config_template_v1_0_8.py  data_generator.py  gan.py  generateLwtnnNetwork.py  generate_mask.py  import_tree.py  main.py  make_scaler.py  minibatch.py  parameterize_classifier.py  parameters.py  plot_scans.py  preprocessing.py  process_all_separate.C  produce_output.py  sampleList.py  separate_invalids.C  signal_coupling.py  split_training.py  submit_on_slurm.py  test_slurm.py  threadGPU.py
MEMWeight/: .gitignore  .gitmodules  CMakeLists.txt
MEMWeight/MatrixElements/: build_all_ME.sh
MEMWeight/MatrixElements/HToZA_1000_200/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_1000_200/include/: HelAmps_2HDM4MG5_may15.h  Parameters_2HDM4MG5_may15.h  SubProcess.h
MEMWeight/MatrixElements/HToZA_1000_200/src/: HelAmps_2HDM4MG5_may15.cc  Parameters_2HDM4MG5_may15.cc
MEMWeight/MatrixElements/HToZA_1000_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_1000_50/include/: HelAmps_2HDM4MG5_may15.h  Parameters_2HDM4MG5_may15.h  SubProcess.h
MEMWeight/MatrixElements/HToZA_1000_50/src/: HelAmps_2HDM4MG5_may15.cc  Parameters_2HDM4MG5_may15.cc
MEMWeight/MatrixElements/HToZA_1000_500/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_1000_500/include/: HelAmps_2HDM4MG5_may15.h  Parameters_2HDM4MG5_may15.h  SubProcess.h
MEMWeight/MatrixElements/HToZA_1000_500/src/: HelAmps_2HDM4MG5_may15.cc  Parameters_2HDM4MG5_may15.cc
MEMWeight/MatrixElements/HToZA_2000_1000/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_2000_1000/include/: HelAmps_2HDM4MG5_may15.h  Parameters_2HDM4MG5_may15.h  SubProcess.h
MEMWeight/MatrixElements/HToZA_2000_1000/src/: HelAmps_2HDM4MG5_may15.cc  Parameters_2HDM4MG5_may15.cc
MEMWeight/MatrixElements/HToZA_200_100/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_200_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_250_100/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_250_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_3000_2000/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_300_100/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_300_200/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_300_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_500_100/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_500_200/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_500_300/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_500_400/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_500_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_650_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_800_100/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_800_200/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_800_400/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_800_50/: CMakeLists.txt
MEMWeight/MatrixElements/HToZA_800_700/: CMakeLists.txt
MEMWeight/MatrixElements/ME_DY/: CMakeLists.txt
MEMWeight/MatrixElements/ME_DY/src/: HelAmps_sm.cc  (+1 more)
MEMWeight/MatrixElements/ME_TTbar/: CMakeLists.txt
MEMWeight/confs/: TTbar_FullyLeptonic.lua  dy_to_ll_simple.lua  htoza_llbb.lua
MEMWeight/scripts/: launch_HToZA.py  launch_HToZA.sh  launch_HToZA_invalid.sh  launch_multiple.py  merge_and_regroup.sh  submit_on_slurm.py
MEMWeight/src/: main.cc  main_DY.cc  main_HToZA.cc  main_TT.cc
(+249 files in other folders)
